# tetris-rl-lab

./: .gitignore  AGENTS.md  README.md  STATUS.md  ale_tetris_agent.py  note.md  pyproject.toml  requirements.txt
agents/ale/: __init__.py  ale_tetris_agent.py  env.py  pure_rl_ale_agent.py
agents/custom/: __init__.py  pure_rl_custom_agent.py  render_custom_episode.py  tetris_custom_agent.py
artifacts/ale_37_line/: best_weights.npy  evaluation.json  history.json
artifacts/ale_stable_high_score/: evaluation.json  source_meta.json
artifacts/custom_best/: best_weights.npy  custom_episode.json  history.json  mean_weights.npy  meta.json
artifacts/custom_pure_rl/: evaluation.json  meta.json  vec_normalize.pkl
docs/: MODELS.md  PROJECT_SUMMARY.md
tests/: test_ale_boundaries.py  test_custom_env.py
