[project]
name = "tetrisgpt"
version = "0.1.0"
description = "Monorepo for ALE Tetris and a custom score-mode Tetris RL environment."
requires-python = ">=3.11"
dependencies = [
  "ale-py==0.8.1",
  "gymnasium==0.29.1",
  "imageio==2.37.2",
  "imageio-ffmpeg==0.6.0",
  "numpy==1.26.4",
  "pillow==11.3.0",
  "stable-baselines3==2.8.0",
  "torch==2.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["packages/tetris_env", "."]
